# xAI-Sentiment-Analyst

./: .env.example  .gitignore  README.md  cookies.json  main.py  playwright_tweets.py  pyproject.toml  scrape_tweets.py  tokopedia_product_review.py  tweets_scraper.py
backend/: main.py
backend/services/: model.py  scraper.py  sentiment.py
frontend/: app.py  sentiment.py  temp.py  visualize.py
helpers/: csv_config.py  preprocess.py  scraper.py
old/: scrape.py
