[project]
name = "webscrapping-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "emoji>=2.14.1",
    "fastapi>=0.116.2",
    "httpx>=0.28.1",
    "matplotlib>=3.10.6",
    "nest-asyncio>=1.6.0",
    "nltk>=3.9.1",
    "pandas>=2.3.2",
    "playwright>=1.54.0",
    "sastrawi>=1.0.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "streamlit>=1.48.1",
    "torch>=2.8.0",
    "transformers>=4.56.1",
    "uvicorn>=0.35.0",
    "wordcloud>=1.9.4",
]
